Ensured that the pre-loader window will be visible

--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -1451,7 +1451,7 @@ main {
   height: 100%;
   width: 80%;
   background-image: var(--gradient);
-  animation: animateLogo 4000ms linear infinite;
+  animation: animateLogo 5000ms linear infinite;
   position: absolute;
 }
 @keyframes animateLogo {
