--- a/src/styles/sass/_preloader.scss
+++ b/src/styles/sass/_preloader.scss
@@ -30,7 +30,7 @@
       height: 100%;
       width: 80%;
       background-image: var(--gradient);
-      animation: animateLogo 4000ms linear infinite;
+      animation: animateLogo 5000ms linear infinite;
       position: absolute;
     }
 
